--- a/css/style.css
+++ b/css/style.css
@@ -306,3 +306,30 @@ header {
   margin-bottom: 30px;
   text-align: left;
 }
+
+.portfolio {
+  background: #f6f6f8;
+}
+
+.potfolio__container {
+  padding: 100px 0 130px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.portfpolio__subtitle {
+  max-width: 350px;
+}
+
+.portfolio__descr {
+  max-width: 730px;
+  margin: 50px 0 70px 0;
+}
+
+.portfolio__examples-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
