--- a/css/style.css
+++ b/css/style.css
@@ -388,3 +388,59 @@ header {
 .play-button__picture-wrapper {
   margin-right: 21px;
 }
+
+.subscribe__container {
+  padding-bottom: 85px;
+  margin-top: 165px;
+  border-top: 1px solid #e0e0e0;
+}
+
+.subscribe__subtitle {
+  padding-top: 85px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+}
+
+.subscribe__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.subscribe__offer {
+  margin: 20px 0 30px 0;
+}
+
+.subscribe__user-data {
+  border: 1px solid #e0e0e0;
+  border-radius: 30px;
+  display: flex;
+}
+
+.subscribe-form__user-mail {
+  padding: 15px 140px 15px 33px;
+  border: none;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  outline: none;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 21px;
+  color: #999999;
+}
+
+.subcribe-form__send-button {
+  border-radius: 0;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.subscribe__assurance {
+  margin-top: 35px;
+}
