--- a/css/style.css
+++ b/css/style.css
@@ -444,3 +444,91 @@ header {
 .subscribe__assurance {
   margin-top: 35px;
 }
+
+.footer {
+  background-color: #f6f6f8;
+}
+
+.footer__container {
+  padding: 70px 0 30px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__lists-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 70px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.footer-subtitle {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000000;
+}
+
+.footer-list {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  color: #999999;
+  list-style-type: none;
+}
+
+.footer__contacts-item {
+  margin-top: 30px;
+}
+
+.footer__contacts-item:first-child {
+  margin-top: 35px;
+}
+
+.footer__contacts-item_email::before {
+  content: url(../img/footer-contacts__mail-icon.png);
+  margin-right: 15px;
+}
+
+.footer__contacts-item_phone-number::before {
+  content: url(../img/footer-contacts__phone-icon.png);
+  margin-right: 15px;
+}
+
+.footer__contacts-item_location::before {
+  content: url(../img/footer-icons__adress-icon.png);
+  margin-right: 15px;
+}
+
+.footer__links-item::before {
+  content: url(../img/footer-list__link-arrow.png);
+  margin-right: 12px;
+}
+
+.footer__links-item {
+  margin-top: 30px;
+}
+
+.footer__links-item:first-child {
+  margin-top: 35px;
+}
+
+.footer__links-item a {
+  text-decoration: none;
+  color: #999999;
+}
+
+.footer__copyright {
+  margin-top: 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 21px;
+  text-align: center;
+  color: #999999;
+}
